# monorepo

./: README.md  pyproject.toml
libraries/emote/: emote.py  pyproject.toml
projects/my_project/: pyproject.toml
